# funding-service-pre-award

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  babel.cfg  build.py  docker-compose.yml  pyproject.toml  pytest.ini  static_assets.py  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  copilot_deploy.yml  deploy.yml
account_store/: tasks.py
account_store/core/: account.py
account_store/db/models/: __init__.py  account.py  role.py
account_store/db/schemas/: account.py
application_store/db/schemas/: application.py
application_store/scripts/: seed_db_test_data.py
apply/: routes.py  tasks.py
apply/default/: application_routes.py
apply/models/: application.py
apply/templates/: apply-base.html  apply-landing.html
apply/templates/apply/: apply-base.html  contact-us.html  landing.html  tasklist.html
assessment_store/config/mappings/: assessment_mapping_fund_round.py
assessment_store/tasks/: db_tasks.py
common/: tasks.py
common/templates/: fs-base.html
common/templates/common/: fs-base.html
common/templates/partials/: fs-cookies-end.html
common/utils/: date_time_utils.py  filters.py
config/envs/: default.py  development.py
copilot/fsd-pre-award/: manifest.yml
copilot/fsd-pre-award-application-deadline-reminders/: manifest.yml
copilot/fsd-pre-award-send-application-assessment-report/: manifest.yml
copilot/fsd-pre-award-send-incomplete-applications-email/: manifest.yml
copilot/fsd-pre-award-send-incomplete-applications-emails/: manifest.yml
copilot/fsd-pre-award-send-report/: manifest.yml
copilot/fsd-pre-award/overrides/: cfn.patches.yml
data/: models.py
data/crud/: accounts.py  applications.py  assessment_records.py  fund_round_queries.py
db/migrations/: .current-alembic-head
frontend/templates/: base.jinja.html  cookie-start.html  fs-base.html
fund_store/db/: queries.py
pre_award/account_store/: tasks.py
pre_award/apply/: constants.py  helpers.py
pre_award/assess/: blueprint_middleware.py
pre_award/common/: error_routes.py  tasks.py
pre_award/config/: __init__.py
pre_award/db/: __init__.py
pre_award/frontend/: README.md
pre_award/fund_store/: decorators.py
pre_award/utils/: e2e_cleanup_service.py  routes.py
proto/: tasks.py
proto/apply/: __init__.py  application_routes.py  grant_routes.py  web_routes.py
proto/assess/: __init__.py  application_routes.py
proto/common/: errors.py  helpers.py
proto/form_runner/: expressions.py  form_route_helper.py  forms.py  helpers.py  routes.py
proto/manage/: __init__.py
proto/report/: __init__.py
reporting/: helpers.py  reporting.py  tasks.py
scripts/: delete_grant_application_data.py  migrate_fsd_config.py  migrate_levellingup_emails.sql  seed_e2e_user_accounts.py
scripts/data_deletion/: data_retention_config.py  delete_grant_pii_data.py
services/notify/: __init__.py
tests/: conftest.py
tests/account_store_tests/: conftest.py
tests/application_store_tests/: conftest.py  helpers.py  test_application_status.py  test_queries.py  test_reports.py  test_routes.py  test_seed_db.py  test_submit.py
tests/apply_tests/: test_dashboard.py  test_eligibility_routes.py
tests/assess_tests/: test_assignment.py  test_authorisation.py  test_jinja_macros.py  test_maintenance.py  test_routes.py
tests/assessment_store_tests/: conftest.py  test_db_scores.py  test_routes.py
tests/authenticator_tests/: conftest.py  test_magic_links.py  test_sso.py
tests/frontend_apply_tests/: conftest.py  test_apply_routes.py  test_apply_templates.py
tests/integration/: conftest.py  seeding.py  test_healthcheck.py
tests/pre_award/: test_debugtoolbar.py
tests/unit/: conftest.py  test_apply_routes.py  test_apply_templates.py  test_reporting.py  test_reporting_helpers.py  test_reporting_reporting.py
(+609 files in other folders)
