[project]
name = "funding-service-pre-award"
version = "0.1.0"
description = "The Funding Service pre-award frontends and stores."
readme = "README.md"
license = "MIT License"
requires-python = ">=3.10, <3.11"

dependencies = [
    "airium==0.2.6",
    "alembic-utils==0.8.6",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "boto3==1.37.25",
    "colored==2.3.0",
    "cssmin==0.2.0",
    "dataclass-dict-convert==1.7.4",
    "email-validator==2.2.0",
    "flask-assets==2.1.0",
    "flask-babel==4.0.0",
    "flask-compress==1.17",
    "flask-json==0.4.0",
    "flask-marshmallow==1.3.0",
    "flask-migrate==4.1.0",
    "flask-redis==0.4.0",
    "flask-restx==1.3.0",
    "flask-session==0.8.0",
    "flask-sqlalchemy==3.1.1",
    "flask-talisman==1.1.0",
    "flask-wtf==1.2.2",
    "flask==3.0.3",
    "govuk-frontend-jinja==2.8.0",
    "greenlet==3.1.1",
    "gunicorn[gevent]==23.0.0",
    "invoke==2.2.0",
    "jsmin==3.0.1",
    "jsonpath-rw-ext==1.2.2",
    "marshmallow-enum==1.5.1",
    "marshmallow-sqlalchemy==1.0.0",
    "msal==1.31.1",
    "num2words==0.5.14",
    "openapi-spec-validator==0.7.1",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "prance==23.6.21.0",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "requests==2.32.3",
    "shortuuid==1.0.13",
    "slugify==0.0.1",
    "sqlalchemy-json==0.7.0",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy[mypy]==2.0.40",
    "xhtml2pdf==0.2.17",
    "notifications-python-client==10.0.1",
    "funding-service-design-utils[toggles]==6.1.0",
]

[tool.djlint]
# run with : `djlint path/to/file.html --reformat --format-css --format-js`
#   this is deliberately commented out.  we don't want to format these tags as
#   it will introduce new lines and tabs, making the translation matching brittle.
# custom_blocks="trans,endtrans"
max_line_length=1000        # high limit, we don't want line breaks for translations.
max_attribute_length=1000   # ^^^
exclude=".venv,venv"
profile="jinja2"

[tool.ruff]
line-length = 120

target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
]
ignore = []
exclude = [
    "pre_award/db/migrations/versions/",
    "venv*",
    ".venv*",
    "__pycache__",
    "pre_award/fund_store/config/fund_loader_config/FAB/*"
]
mccabe.max-complexity = 12

[tool.uv]


[dependency-groups]
dev = [
    "asserts==0.13.1",
    "beautifulsoup4==4.13.3",
    "click==8.1.8",
    "colored==2.3.0",
    "debugpy==1.8.13",
    "deepdiff==8.3.0",
    "dparse==0.6.4",
    "invoke==2.2.0",
    "invoke==2.2.0",
    "json2html==1.3.0",
    "moto[s3]==5.1.1",
    "pre-commit==4.1.0",
    "pytest-env==1.1.5",
    "pytest-flask==1.3.0",
    "pytest-html==4.1.1",
    "pytest-mock==3.14.0",
    "pytest==8.3.5",
    "requests-mock==1.12.1",
    "ruff==0.9.10",
    "flask-debugtoolbar==0.16.0",
    "freezegun==1.5.1",
    "responses==0.25.7",
    "types-flask-migrate==4.1.0.20250112",
    "types-pymysql==1.1.0.20241103",
    "types-colorama==0.4.15.20240311",
    "types-psycopg2==2.9.21.20250121",
    "mypy==1.15.0",
    "types-babel==2.11.0.15",
    "testcontainers==4.9.2",
    "pytest-xdist==3.6.1",
    "types-openpyxl==3.1.5.20250306",
]
[tool.mypy]
strict = true
packages = ["apply", "common", "data"]

[[tool.mypy.overrides]]
module = [
    "flask_babel",
    "fsd_utils.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pre_award.*",
    "static_assets",
    "app",
    "fsd_utils.*"
]
ignore_errors = true
